--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dj-database-url>=2.3.0",
+    "django>=5.1.7",
     "dotenv>=0.9.9",
 ]
