--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "dj-database-url>=2.3.0",
     "django>=5.1.7",
+    "django-bootstrap5>=25.1",
     "dotenv>=0.9.9",
 ]
