--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "dj-database-url>=2.3.0",
     "django>=5.1.7",
     "django-bootstrap5>=25.1",
+    "django-filter>=25.1",
     "dotenv>=0.9.9",
 ]
