--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
 asgiref==3.8.1
-brotli==1.1.0
+Brotli==1.1.0
 click==8.1.8
 dj-database-url==2.3.0
-django==5.1.7
+Django==5.1.7
+django-bootstrap5==25.1
+django-filter==25.1
+django-widget-tweaks==1.5.0
 dotenv==0.9.9
 gunicorn==23.0.0
 h11==0.14.0
 packaging==24.2
-pip==24.3.1
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
+ruff==0.9.10
 sqlparse==0.5.3
-typing-extensions==4.12.2
+typing_extensions==4.12.2
 uvicorn==0.34.0
 whitenoise==6.9.0
