--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "django>=5.1.7",
     "django-bootstrap5>=25.1",
     "django-filter>=25.1",
+    "django-widget-tweaks>=1.5.0",
     "dotenv>=0.9.9",
 ]
