--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SECRET_KEY = 'django-insecure-azk#l^gsx651)s06w4c2-cu)cfh6^ihr%9bgqq0_6-(a#!5@0*'
 ACCESS_TOCKEN = '31a1bfd16564499184e4144bc9821197'
+DATABASE_URL = 'sqlite:///db.sqlite3'
 RENDER_EXTERNAL_HOSTNAME = 'https://task-manager-q2h6.onrender.com'
-
