--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "django-filter>=25.1",
     "django-widget-tweaks>=1.5.0",
     "dotenv>=0.9.9",
+    "psycopg2-binary>=2.9.10",
 ]
 [build-system]
 requires = ["hatchling"]
